# secondTry

./: CMakeLists.txt  main.cpp  sayHi.cpp
Assessment1/: Driver.cpp  Tasks.txt  Workers.txt  header.cpp  header.h
Assessment2/: Driver.cpp  README.txt  header.cpp  header.h
Assessment_3/: Solution.cpp  collect.h
Labs/Lab1/Debug-B/: main.cpp  mylibrary.cpp  mylibrary.h
Labs/Lab1/Task3/: L1T3implementation.cpp  L1T3main.cpp  header.L1T3.h
Labs/Lab1/Task4/: L1T4.main.cpp
Labs/Lab1/task1/: Debug-A.cpp
Labs/Lab1/task2/: task2main.cpp
Labs/Lab1/task5/: L1T5main.cpp
Labs/Lab2/: Debug-A.cpp  Debug-B.cpp  Debug-C.cpp
Labs/Lab2/Task2/: Read-Words.cpp  output.txt
Labs/Lab2/Task3/: cat.cpp
Labs/Lab2/Task4/: Matrix.cpp
Labs/Lab2/Task5/: L2exception.cpp
Labs/Lab3/Task1/: Debug-A.cpp  Debug-B.cpp
Labs/Lab3/Task2/: Cat.cpp
Labs/Lab3/Task3/: Bonus.cpp
Labs/Lab3/Task4/: Library.cpp  four.cpp  library.h
Labs/Lab3/Task5/: Library.cpp  five.cpp  library.h
Labs/Lab4/T1/: Debug-A.cpp
Labs/Lab4/T2/: A-Class.cpp  Box.cpp
Labs/Lab4/T3/: Cat.cpp  Transport.cpp
Labs/Lab4/T4/: Task4Answers.txt
Labs/Lab4/T5/: ThreeLittlePigs.cpp
Labs/Lab5/Task_1/: Debug-A.cpp  findMax.cpp
Labs/Lab5/Task_2/: Symbolic.cpp
Labs/Lab5/Task_3/: Debug-B.cpp  fibT.cpp
Labs/Lab5/Task_4/: doubled.cpp  doubledHold.cpp
Labs/Lab5/Task_5/: Output.txt  Task5.cpp
LecturePractice/: Hacker.cpp
s/: work.cpp
